---
title: Oauth Flow - Class Diagram
---
classDiagram
    class OauthManager {
        +String start_auth()
        +String receive_auth(url) String
        -PkceManager pkce_manager_
        -AuthCodeManager auth_code_manager_
        -StateHashManager state_hash_manager_
        -TokenRequestManager token_request_manager_
        -State state_
        -void set_state(state) State
    }

    class PkceManager {
        -String code_challenge_
        -String code_verifier_
        +String get_code_challenge()
        +String get_code_verifier()
    }

    class AuthCodeManager {
        +String get_auth_url(code_challenge, state_hash) String[]
    }

    class StateHashManager {
        +String get_state_hash()
    }

    class TokenRequestManager {
        +String[] send_token_request(auth_code, code_verifier) String[]
    }

    class IDatabaseManager {
        <<interface>>
        +DbManager(database) IDatabase
        -String database
        +void store(items) Array
    }

    class IDatabase {

    }

    class State {
        <<enumeration>>
        INITIAL
        USER_REDIRECTED
        AUTH_RECEIVED
        EXCHANGE_REQUEST_SENT
        TOKENS_RECEIVED
        SESSION_ESTABLISHED
        ERROR
    }

    OauthManager ..> State
    OauthManager *-- PkceManager
    OauthManager *-- AuthCodeManager
    OauthManager *-- StateHashManager
    OauthManager *-- TokenRequestManager
